MID-8842 copied ninja code to support-4.4 (2eb437f9)